@@ -1,6 +1,7 @@
 2.1.0 /
 [Alexandr Topilski]
 - Pickle converter
+- Azure connection from string
 
 2.0.1 / March 8, 2019
 [Alexandr Topilski]
