@@ -21,9 +21,11 @@
 #include <string>
 
 #include <QCheckBox>
+#include <QComboBox>
 #include <QFileDialog>
 #include <QGroupBox>
 #include <QHBoxLayout>
+#include <QInputDialog>
 #include <QLabel>
 #include <QLineEdit>
 #include <QMessageBox>
@@ -44,11 +46,19 @@
 
 #include "translations/global.h"
 
+#define NONE_STRING "None"
+#define STACKEXCHANGE_REDIS_STRING "StackExchange.Redis"
+
+#define PASSWORD_FIELD "password"
+#define SSL_FIELD "ssl"
+
 namespace {
 const QString trUnixPath = QObject::tr("Unix socket path:");
 const QString trRemote = QObject::tr("Remote");
 const QString trLocal = QObject::tr("Local");
 const QString trSSL = QObject::tr("SSL");
+const QString trLoadFromConnectionString = QObject::tr("Load from connection string");
+const QString trConnectionString_1S = "Connection string (%1)";
 }  // namespace
 
 namespace fastonosql {
@@ -118,6 +128,15 @@ ConnectionWidget::ConnectionWidget(QWidget* parent) : base_class(parent) {
   use_auth_->setChecked(false);
   password_box_->setEnabled(false);
   password_echo_mode_button_->setEnabled(false);
+
+  QHBoxLayout* hot_settings_layout = new QHBoxLayout;
+  hot_settings_label_ = new QLabel;
+  hot_settings_layout->addWidget(hot_settings_label_);
+  hot_settings_ = new QComboBox;
+  hot_settings_->addItems({NONE_STRING, STACKEXCHANGE_REDIS_STRING});
+  hot_settings_layout->addWidget(hot_settings_);
+  VERIFY(connect(hot_settings_, &QComboBox::currentTextChanged, this, &ConnectionWidget::updateConnectionString));
+  addLayout(hot_settings_layout);
 }
 
 void ConnectionWidget::syncControls(proxy::IConnectionSettingsBase* connection) {
@@ -160,6 +179,7 @@ void ConnectionWidget::retranslateUi() {
   local_->setText(trLocal);
   use_auth_->setText(trUseAuth);
   default_db_label_->setText(trDefaultDb);
+  hot_settings_label_->setText(trLoadFromConnectionString);
   base_class::retranslateUi();
 }
 
@@ -195,6 +215,53 @@ void ConnectionWidget::secureConnectionChange(bool checked) {
                            translations::trSecureConnectionAvailibleOnlyInProVersion);
   is_ssl_connection_->setChecked(false);
 #endif
+}
+
+void ConnectionWidget::updateConnectionString(const QString& data) {
+  if (data == NONE_STRING) {
+    return;
+  }
+
+  if (data == STACKEXCHANGE_REDIS_STRING) {
+    bool ok;
+    QString string_text =
+        QInputDialog::getText(this, STACKEXCHANGE_REDIS_STRING, trConnectionString_1S.arg(STACKEXCHANGE_REDIS_STRING),
+                              QLineEdit::Normal, QString(), &ok, Qt::WindowCloseButtonHint);
+    if (ok && !string_text.isEmpty()) {
+      // some.redis.cache.windows.net:6380,password=rf0zcQkrVCo1oWBQDBkl2rSOvallKyFIoETwH4V0pOM=,ssl=True,abortConnect=False
+
+      QStringList tokens = string_text.split(",");
+      bool changed = false;
+      for (QString setting : tokens) {
+        int delem = setting.indexOf('=');
+        if (delem != -1) {
+          QString field = setting.mid(0, delem);
+          QString value = setting.mid(delem + 1);
+          if (field == PASSWORD_FIELD) {
+            use_auth_->setChecked(true);
+            password_box_->setText(value);
+            changed = true;
+          } else if (field == SSL_FIELD) {
+            bool is_ssl = value == "True";
+            is_ssl_connection_->setChecked(is_ssl);
+            changed = true;
+          }
+        } else {
+          common::net::HostAndPort hs;
+          std::string value_str = common::ConvertToString(setting);
+          if (common::ConvertFromString(value_str, &hs)) {
+            remote_->setChecked(true);
+            host_widget_->setHost(hs);
+            changed = true;
+          }
+        }
+      }
+
+      if (changed) {
+        ssh_widget_->setSSHChecked(false);
+      }
+    }
+  }
 }
 
 bool ConnectionWidget::validated() const {
