@@ -1,7 +1,8 @@
 2.1.0 /
 [Alexandr Topilski]
 - Pickle converter
-
+- [Redis] Azure connection from string
+ 
 2.0.1 / March 8, 2019
 [Alexandr Topilski]
 - Changed icons
